--- a/styles.css
+++ b/styles.css
@@ -3,40 +3,27 @@
 }
 
 body {
-  height: 100vh;
-  width: 100%;
   background-color: var(--main-bg-color);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   cursor: url("img/spoon.png"), auto;
 }
 
-.center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+article{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.gameboard{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 500px;
 }
 
-#board {
-  width: 50vmin;
-  height: 50vmin;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-}
-
-.square {
-  margin: 5%;
-  position: relative;
-}
-
-.square div {
-  display: block;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.1);
+input[type="checkbox"]{
+  display: inline-block;
+  height: 80px;
+  width: 80px;
 }
