--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,25 @@ body {
   left: 0;
   background: rgba(0, 0, 0, 0.1);
 }
+
+input[type="checkbox"] {
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  background-image: url(img/easteregg1.png);
+  background-repeat: no-repeat;
+  appearance: none;
+  animation: blink-animation 3s steps(5, start) infinite;
+  z-index: 1;
+}
+
+input[type="checkbox"]:checked {
+  animation: none;
+  background-image: url(img/egg1.png);
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
