--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,29 @@ body {
   cursor: url("img/spoon.png"), auto;
 }
 
-article{
+
+article, .gameboard, .wrapper--information{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+article, .gameboard {
   justify-content: center;
 }
+
+article, .wrapper--information{
+  flex-direction: column;
+  align-items: center;
+}
+
+.wrapper--information {
+  background-color: #ffffff;
+  width: 430px;
+  height: 500px;
+  border-radius: 2px;
+  border: 1px solid #3d3d3d;
+}
+
 .gameboard{
-  display: flex;
-  justify-content: center;
   flex-wrap: wrap;
   width: 500px;
 }
