Font, border and color changes

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@ body {
   background-position: 0px 0px, 104px 104px;
   background-size: 208px 208px;
   background-color: var(--main-bg-color);
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  font-family: 'Dongle', sans-serif;
+  font-size: 27px;
+  line-height: 20px;
   cursor: url("img/spoon.png"), auto;
 }
 
@@ -25,15 +26,16 @@ main {
 
 button {
   margin: 10px;
-  padding: 10px;
+  padding: 10px 20px 10px 20px;
   background-color: var(--button-color);
   border-radius: 8px;
-  font-size: 15px;
   border: none;
+  font-family: 'Dongle', sans-serif;
+  font-size: 25px;
 }
 
-div p {
-  width: 300px;
+div p, h1 {
+  width: 240px;
   text-align: center;
 }
 
@@ -64,8 +66,8 @@ article,
   width: 430px;
   height: 550px;
   border-radius: 50% 60% 50% 50% / 70% 70% 40% 40%;
-  border: 1px solid #3d3d3d;
-  padding-top: 60px;
+  border: 1px solid rgb(138, 195, 208);
+  padding-top: 50px;
 }
 
 .gameboard {
@@ -73,6 +75,7 @@ article,
   width: 550px;
   background-color: #ffffff;
   padding: 50px;
+  border: 5px solid rgb(125, 184, 197);
 }
 
 input[type="checkbox"] {
