--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,29 @@
   }
 }
 
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
 body {
   background-image: radial-gradient(var(--white-color) 28.8%, transparent 30.8%),
     radial-gradient(var(--white-color) 28.8%, transparent 30.8%);
@@ -84,6 +107,11 @@ button {
   font-size: 25px;
 }
 
+button:hover {
+  transform: scale(0.9);
+  cursor: url("img/spoon.png"), auto;
+}
+
 div p,
 h1 {
   width: 240px;
@@ -95,6 +123,36 @@ article {
   padding-right: 500px;
 }
 
+#gameScreen h1 {
+  text-transform: uppercase;
+}
+
+#gameScreen p,
+.wrapper--information p:nth-of-type(3) {
+  font-weight: bold;
+}
+
+#gameScreen span {
+  font-weight: normal;
+}
+
+.wrapper--information p {
+  margin: 5px;
+}
+
+.wrapper--information p:first-of-type {
+  margin-top: 20px;
+}
+
+.wrapper--information p:nth-of-type(2),
+.wrapper--information p:last-of-type {
+  margin-bottom: 40px;
+}
+
+.wrapper--information p:nth-of-type(3) {
+  margin-top: 40px;
+}
+
 .wrapper--information {
   width: 430px;
   height: 550px;
@@ -103,6 +161,10 @@ article {
   padding-top: 60px;
   border: 1px solid rgb(138, 195, 208);
   padding-top: 50px;
+}
+
+.wrapper--information img:hover {
+  animation: shake var(--animation-time) cubic-bezier(0.36, 0.07, 0.19, 0.97);
 }
 
 .gameboard {
